promptpack-docs/docs/spec/v1.0/examples.md
---
sidebar_position: 3
---

# Real-World Examples

These examples showcase how PromptPacks solve real business problems. Each demonstrates different benefits of the multi-prompt architecture and shared resource model.

## Complete Customer Support System

This pack handles the full spectrum of customer service interactions by using specialized prompts for different scenarios.

### The Business Problem

Customer service teams need to handle diverse inquiries—from simple billing questions to complex technical issues. A single generic prompt can't optimize for all scenarios, leading to poor response quality and frustrated customers.

### The PromptPack Solution

```json
{
  "id": "customer-support",
  "name": "Customer Support Pack",
  "version": "1.2.0",
  "description": "Complete customer service solution with specialized prompts",
  
  "template_engine": {
    "version": "v1",
    "syntax": "{{variable}}",
    "features": ["basic_substitution", "fragments"]
  },
  
  "prompts": {
    "support": {
      "id": "support", 
      "name": "General Support",
      "version": "1.0.0",
      "system_template": "You are a {{role}} for {{company}}.\n\n{{customer_context}}\n\nHelp resolve their issue professionally and empathetically.",
      "variables": [
        {
          "name": "role",
          "type": "string",
          "required": true,
          "example": "customer support specialist"
        },
        {
          "name": "company", 
          "type": "string",
          "required": true,
          "example": "TechCorp"
        }
      ],
      "tools": ["lookup_customer", "create_ticket"],
      "parameters": {
        "temperature": 0.7,
        "max_tokens": 500
      },
      "validators": [
        {
          "type": "banned_words",
          "enabled": true,
          "params": {
            "words": ["impossible", "can't help", "not my job"]
          }
        }
      ]
    },
    
    "technical": {
      "id": "technical",
      "name": "Technical Support", 
      "version": "1.1.0",
      "system_template": "You are a {{role}} for {{company}}.\n\nCustomer's technical issue: {{issue_description}}\n\nProvide step-by-step troubleshooting guidance.",
      "variables": [
        {
          "name": "role",
          "type": "string", 
          "required": true,
          "example": "technical support engineer"
        },
        {
          "name": "issue_description",
          "type": "string",
          "required": true
        }
      ],
      "tools": ["run_diagnostic", "access_knowledge_base"],
      "parameters": {
        "temperature": 0.5,  // More deterministic for technical accuracy
        "max_tokens": 800    // Longer responses for detailed steps
      }
    },
    
    "billing": {
      "id": "billing",
      "name": "Billing Support",
      "version": "1.0.1", 
      "system_template": "You are a {{role}} for {{company}}.\n\nCustomer billing inquiry: {{billing_question}}\n\nProvide accurate billing information and assistance.",
      "variables": [
        {
          "name": "role", 
          "type": "string",
          "required": true,
          "example": "billing specialist"
        },
        {
          "name": "billing_question",
          "type": "string",
          "required": true
        }
      ],
      "tools": ["lookup_account", "process_payment", "generate_invoice"],
      "validators": [
        {
          "type": "pii_detection",
          "enabled": true,
          "fail_on_violation": true
        }
      ]
    }
  },
  
  "tools": {
    "lookup_customer": {
      "name": "lookup_customer",
      "description": "Retrieve customer account information",
      "parameters": {
        "type": "object",
        "properties": {
          "customer_id": {
            "type": "string",
            "description": "Customer account identifier"
          }
        },
        "required": ["customer_id"]
      }
    },
    
    "create_ticket": {
      "name": "create_ticket", 
      "description": "Create support ticket for complex issues",
      "parameters": {
        "type": "object",
        "properties": {
          "title": {"type": "string"},
          "description": {"type": "string"},
          "priority": {
            "type": "string",
            "enum": ["low", "medium", "high", "urgent"]
          }
        },
        "required": ["title", "description"]
      }
    }
  },
  
  "fragments": {
    "customer_context": "Customer: {{customer_name}}\nAccount Type: {{account_type}}\nIssue Category: {{category}}",
    "escalation_notice": "I'm going to connect you with a specialist who can provide more detailed assistance."
  }
}
```

### Key Benefits Demonstrated

**Specialized Expertise**: Each prompt optimizes for its domain—technical prompts use lower temperature for accuracy, billing prompts include PII detection

**Shared Efficiency**: All prompts share the same tools and fragments, reducing duplication and ensuring consistency

**Independent Evolution**: The technical prompt is at v1.1.0 while others are at v1.0.x, showing how different areas can evolve at their own pace

**Operational Safety**: Banned word validators prevent negative language in support contexts, while PII detection protects sensitive billing information

## Content Marketing Suite

This pack demonstrates how creative teams can use PromptPacks to maintain brand consistency across different content types.

### Marketing Challenge

Marketing teams need to create various content types (blogs, social media, emails) while maintaining consistent brand voice and meeting different platform requirements. Manual coordination leads to inconsistent messaging and duplicated effort.

### Multi-Channel Solution

```json
{
  "id": "content-marketing", 
  "name": "Content Marketing Suite",
  "version": "2.0.0",
  "description": "Brand-consistent content generation across all channels",
  
  "prompts": {
    "blog": {
      "id": "blog",
      "name": "Blog Writer",
      "version": "2.1.0", 
      "system_template": "{{fragments.brand_voice}}\n\nWrite a {{post_type}} blog post about {{topic}} for {{audience}}.\n\n{{fragments.blog_guidelines}}",
      "variables": [
        {
          "name": "post_type",
          "type": "string",
          "validation": {
            "enum": ["how-to", "thought-leadership", "case-study", "news"]
          }
        },
        {
          "name": "topic", 
          "type": "string",
          "required": true
        },
        {
          "name": "audience",
          "type": "string",
          "required": true,
          "example": "small business owners"
        }
      ],
      "tools": ["seo_analyzer", "plagiarism_checker"],
      "parameters": {
        "temperature": 0.8,
        "max_tokens": 2000
      }
    },
    
    "social": {
      "id": "social", 
      "name": "Social Media",
      "version": "1.5.0",
      "system_template": "{{fragments.brand_voice}}\n\nCreate a {{platform}} post about {{topic}}.\n\n{{fragments.social_guidelines}}",
      "variables": [
        {
          "name": "platform",
          "type": "string",
          "validation": {
            "enum": ["twitter", "linkedin", "instagram", "facebook"]
          }
        },
        {
          "name": "topic",
          "type": "string", 
          "required": true
        }
      ],
      "validators": [
        {
          "type": "max_length",
          "enabled": true, 
          "params": {
            "max_characters": 280  // Twitter limit
          }
        }
      ]
    },
    
    "email": {
      "id": "email",
      "name": "Email Marketing",
      "version": "1.3.0",
      "system_template": "{{fragments.brand_voice}}\n\nWrite a {{email_type}} email about {{campaign_topic}}.\n\n{{fragments.email_guidelines}}",
      "variables": [
        {
          "name": "email_type",
          "type": "string",
          "validation": {
            "enum": ["newsletter", "promotional", "onboarding", "announcement"]
          }
        },
        {
          "name": "campaign_topic",
          "type": "string",
          "required": true
        }
      ],
      "tools": ["email_validator", "ab_test_generator"]
    }
  },
  
  "tools": {
    "seo_analyzer": {
      "name": "seo_analyzer",
      "description": "Analyze content for SEO optimization",
      "parameters": {
        "type": "object",
        "properties": {
          "content": {"type": "string"},
          "target_keywords": {
            "type": "array",
            "items": {"type": "string"}
          }
        }
      }
    }
  },
  
  "fragments": {
    "brand_voice": "You are writing for TechCorp, a B2B software company. Our voice is professional but approachable, authoritative but not arrogant. We speak to business leaders who value efficiency and results.",
    
    "blog_guidelines": "Structure: compelling headline, intro hook, 3-5 main sections with subheadings, conclusion with CTA. Include specific examples and data. Optimize for SEO without sacrificing readability.",
    
    "social_guidelines": "Be engaging and conversational. Include relevant hashtags. Encourage interaction through questions or polls when appropriate.",
    
    "email_guidelines": "Subject line should be compelling but not clickbait. Personalize when possible. Include clear CTA. Respect recipient's time with concise, valuable content."
  }
}
```

### Content Marketing Benefits

**Brand Consistency**: The shared `brand_voice` fragment ensures all content maintains the same voice and personality

**Platform Optimization**: Each prompt is optimized for its medium—social posts have character limits, blog posts include SEO guidelines

**Content Quality**: Built-in tools like SEO analysis and plagiarism checking ensure high-quality output

**Campaign Coordination**: All content types can reference the same campaign topics and maintain consistent messaging

## AI-Powered Learning Assistant

This pack shows how educational institutions can create comprehensive learning systems that adapt to different learning contexts.

### Educational Challenge

Educational institutions need AI assistants that can tutor students, help with research, provide feedback on assignments, and answer administrative questions. Each context requires different approaches and safety considerations.

### Adaptive Learning Solution

```json
{
  "id": "learning-assistant",
  "name": "AI Learning Assistant", 
  "version": "1.4.0",
  "description": "Comprehensive educational AI supporting multiple learning contexts",
  
  "prompts": {
    "tutor": {
      "id": "tutor",
      "name": "Personal Tutor",
      "version": "1.2.0",
      "system_template": "You are a {{subject}} tutor helping a {{grade_level}} student.\n\nStudent question: {{question}}\n\n{{fragments.socratic_method}}\n\n{{fragments.safety_guidelines}}",
      "variables": [
        {
          "name": "subject",
          "type": "string",
          "required": true,
          "example": "mathematics"
        },
        {
          "name": "grade_level", 
          "type": "string",
          "required": true,
          "validation": {
            "enum": ["elementary", "middle", "high", "college"]
          }
        },
        {
          "name": "question",
          "type": "string", 
          "required": true
        }
      ],
      "parameters": {
        "temperature": 0.6,
        "max_tokens": 600
      },
      "validators": [
        {
          "type": "educational_appropriateness",
          "enabled": true,
          "params": {
            "check_age_appropriate": true,
            "prevent_direct_answers": true
          }
        }
      ]
    },
    
    "research": {
      "id": "research", 
      "name": "Research Assistant",
      "version": "1.1.0",
      "system_template": "You are a research assistant helping with {{research_topic}}.\n\nResearch question: {{question}}\n\n{{fragments.research_methodology}}\n\n{{fragments.citation_requirements}}",
      "variables": [
        {
          "name": "research_topic",
          "type": "string",
          "required": true
        },
        {
          "name": "question",
          "type": "string",
          "required": true
        }
      ],
      "tools": ["database_search", "citation_formatter"],
      "validators": [
        {
          "type": "academic_integrity", 
          "enabled": true,
          "params": {
            "plagiarism_check": true,
            "source_verification": true
          }
        }
      ]
    },
    
    "feedback": {
      "id": "feedback",
      "name": "Assignment Feedback",
      "version": "1.0.0", 
      "system_template": "Provide constructive feedback on this {{assignment_type}}.\n\nAssignment: {{student_work}}\n\nRubric: {{grading_rubric}}\n\n{{fragments.feedback_approach}}",
      "variables": [
        {
          "name": "assignment_type",
          "type": "string",
          "required": true,
          "example": "essay"
        },
        {
          "name": "student_work",
          "type": "string",
          "required": true
        },
        {
          "name": "grading_rubric", 
          "type": "string",
          "required": false
        }
      ],
      "parameters": {
        "temperature": 0.4  // More consistent, objective feedback
      }
    }
  },
  
  "tools": {
    "database_search": {
      "name": "database_search",
      "description": "Search academic databases for research sources",
      "parameters": {
        "type": "object", 
        "properties": {
          "query": {"type": "string"},
          "subject_area": {"type": "string"},
          "publication_years": {
            "type": "object",
            "properties": {
              "start": {"type": "integer"},
              "end": {"type": "integer"}
            }
          }
        }
      }
    }
  },
  
  "fragments": {
    "socratic_method": "Guide the student to discover the answer through questions. Don't give direct answers—help them think through the problem step by step.",
    
    "safety_guidelines": "Always maintain appropriate boundaries. If a question is outside your expertise or inappropriate for the student's level, explain and redirect appropriately.",
    
    "research_methodology": "Help identify reliable sources, evaluate credibility, synthesize information from multiple sources, and maintain academic integrity throughout the research process.",
    
    "citation_requirements": "All sources must be properly cited. Help students understand plagiarism and the importance of attribution.",
    
    "feedback_approach": "Provide specific, actionable feedback. Highlight strengths first, then areas for improvement. Suggest concrete next steps for enhancement."
  }
}
```

### Educational Benefits

**Educational Specialization**: Different prompts use different approaches—tutoring uses Socratic method, research emphasizes methodology, feedback focuses on constructive criticism

**Safety First**: Built-in validators ensure age-appropriate content and academic integrity

**Learning Scaffolding**: Shared fragments encode best educational practices that apply across all contexts

**Adaptive Parameters**: Research assistant uses higher temperature for creativity, feedback uses lower for consistency

## Why These Examples Matter

Each example shows how PromptPacks solve real business problems:

1. **Specialization Over Generalization**: Multiple focused prompts outperform single generic ones
2. **Operational Efficiency**: Shared resources eliminate duplication while ensuring consistency  
3. **Quality Assurance**: Built-in validation and testing prevent common problems
4. **Maintainable Complexity**: Complex systems remain manageable through clear organization
5. **Business Alignment**: Each prompt can optimize for its specific business outcomes

PromptPacks transform conversational AI from experimental prototypes into production-ready business solutions.
